--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-tpl-cli",
-  "version": "1.0.1",
+  "version": "0.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "./bin/index",
   "bin": {
-    "build": "bin/index"
+    "vue-tpl-cli": "bin/index"
   },
   "scripts": {
     "dev": "node ./bin/index"
@@ -12,7 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^2.19.0",
     "download-git-repo": "^1.1.0",
